--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.39.0
-osmnx==1.9.4
-geopandas==1.0.1
-folium==0.18.0
-streamlit-folium==0.22.2
+streamlit>=1.28.0
+osmnx>=1.6.0
+geopandas>=0.14.0
+folium>=0.14.0
+streamlit-folium>=0.15.0
+shapely>=2.0.0
